# ArcticFox

./: .gitignore  Cargo.toml  README.md  TODO.md
src/: arctic_fox_error.rs  lib.rs  macros.rs  tavern_error.rs
src/arctic_fox_data_structures/: actix_web_features.rs  adopted_cub.rs  arctic_fox_monad.rs  cub.rs  mod.rs
src/authentication/: encryption.rs  mod.rs  token.rs
src/data_structures/: DetailedResponse.rs  Model.rs  detailed_response.rs  mod.rs  respondent.rs
tests/: integration_tests.rs  tests.rs
