[package]
name = "tavern_common"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "A common library for tavern's services. It is a way to standardize the requests and responses."
homepage = "https://github.com/adamkali/Tavern"
documentation = "in code"
repository = "https://github.com/adamkali/TavernCommon.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.23", features = ["serde"] }
argon2 = "0.4"
rand_core = { version = "0.6", features = ["std"] }
fmt = "0.1.0"
surrealdb = "1.0.0-beta.8"

[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
